--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.9.3",
+    "date-fns": "^4.1.0",
     "firebase": "^11.9.1",
     "lucide-angular": "^0.513.0",
     "ngx-toastr": "^19.0.0",
