--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "our-love-story",
+  "name": "Soulprints",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +18,9 @@
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/pwa": "^19.2.14",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.9.3",
